# kanban-crew

./: .gitignore  CODE-OF-CONDUCT.md  CONTRIBUTORS.md  LICENSE  NOTICE  PLAN.md  README.md  cypress.config.ts  local-build.sh  mobile-testing.md  package.json  pnpm-lock.yaml
.github/actions/cargo-checks-common-setup/: action.yml
.github/workflows/: pre-release.yml  test.yml
crates/api-types/: Cargo.toml
crates/db/: Cargo.toml
crates/db/migrations/: 20260316000000_add_sort_order_to_tasks.sql  20260316100000_add_chat_threads_and_messages.sql  20260317000000_fix_task_status_values.sql  (+16 more)
crates/deployment/: Cargo.toml
crates/executors/: Cargo.toml  default_mcp.json
crates/git/: Cargo.toml
crates/git-host/: Cargo.toml
crates/local-deployment/: Cargo.toml
crates/mcp/: Cargo.toml
crates/mcp/src/task_server/: handler.rs  mod.rs
crates/mcp/src/task_server/tools/: mod.rs  vision.rs
crates/relay-control/: Cargo.toml
crates/remote/: AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
crates/review/: Cargo.toml
crates/server/: Cargo.toml
crates/server-info/: Cargo.toml
crates/services/: Cargo.toml
crates/tauri-app/: Cargo.toml  tauri.conf.json
crates/tauri-app/capabilities/: default.json
crates/tauri-app/splash/: index.html
crates/tauri-app/src/: main.rs
crates/trusted-key-auth/: Cargo.toml
crates/utils/: Cargo.toml
crates/workspace-manager/: Cargo.toml
crates/worktree-manager/: Cargo.toml
crates/worktree-manager/src/: worktree_manager.rs
cypress/: tsconfig.json
cypress/e2e/: scheduled-jobs.cy.ts
cypress/fixtures/: scheduled-jobs.json
cypress/support/: commands.ts
docs/: ai-chat.mdx  browser-testing.mdx  docs.json  getting-started.mdx  index.mdx  issue-management.mdx  remote-access.mdx  responsible-disclosure.mdx  supported-coding-agents.mdx  troubleshooting.mdx
docs/agents/: amp.mdx  ccr.mdx  claude-code.mdx  cursor-cli.mdx  droid.mdx  gemini-cli.mdx  github-copilot.mdx  openai-codex.mdx  opencode.mdx  qwen-code.mdx
docs/cloud/: authentication.mdx  getting-started.mdx  index.mdx  migration.mdx  organizations.mdx  projects.mdx  troubleshooting.mdx
docs/configuration-customisation/: agent-configurations.mdx  global-settings.mdx
docs/core-features/: completing-a-task.mdx  creating-projects.mdx  creating-tasks.mdx  monitoring-task-execution.mdx  scheduled-jobs.mdx  subtasks.mdx  testing-your-application.mdx
docs/integrations/: azure-repos-integration.mdx  github-integration.mdx  kanban-crew-mcp-server.mdx  mcp-server-configuration.mdx  vscode-extension.mdx
docs/self-hosting/: deploy-docker.mdx  local-development.mdx
docs/settings/: agent-configurations.mdx  general.mdx  index.mdx  mcp-servers.mdx  organization-settings.mdx  projects-repositories.mdx
docs/workspaces/: creating-workspaces.mdx  git-operations.mdx  index.mdx  managing-workspaces.mdx  repositories.mdx  slash-commands.mdx
npx-cli/: README.md  package.json
npx-cli/src/: cli.ts  desktop.ts  download.ts
scripts/: build-tauri-msi.js  dev-stop.js  generate-desktop-manifest.js  generate-tauri-update-json.js
scripts/relay-test-client/: index.html
shared/: types.ts
(+82 files in other folders)
