[package]
name = "deployment"
version = "0.1.31"
edition = "2024"

[dependencies]
db = { path = "../db" }
utils = { path = "../utils" }
git = { path = "../git" }
services = { path = "../services" }
worktree-manager = { path = "../worktree-manager" }
executors = { path = "../executors" }
async-trait = { workspace = true } 
thiserror = { workspace = true } 
anyhow = { workspace = true }
relay-control = { path = "../relay-control" }
trusted-key-auth = { path = "../trusted-key-auth" }
server-info = { path = "../server-info" }
tokio = { workspace = true }
sqlx = "0.8.6"
serde_json = { workspace = true }
tracing = { workspace = true }
git2 = { workspace = true }
futures = "0.3.31"
axum = { workspace = true }
