[package]
name = "mcp"
version = "0.1.41"
edition = "2024"
autobins = false

[[bin]]
name = "kanban-crew-mcp"
path = "src/bin/kanban_crew_mcp.rs"

[lints.clippy]
uninlined-format-args = "allow"

[dependencies]
api-types = { path = "../api-types" }
db = { path = "../db" }
executors = { path = "../executors" }
utils = { path = "../utils" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rmcp = { version = "0.5.0", features = ["server", "transport-io"] }
schemars = { workspace = true }
sentry = { version = "0.46.2", default-features = false, features = ["anyhow", "backtrace", "panic", "debug-images", "reqwest", "rustls"] }
reqwest = { workspace = true }
rustls = { workspace = true }
regex = "1"
base64 = "0.22"
mime_guess = "2.0"
