[package]
name = "kanban-crew-tauri"
version = "0.1.33"
edition = "2024"

[[bin]]
name = "kanban-crew-tauri"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"

server = { path = "../server" }
services = { path = "../services" }
utils = { path = "../utils" }
async-trait = { workspace = true }

tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
serde_json = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
rustls = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-web-kit = { version = "0.3", features = ["WKWebView"] }
